# OOTP_storyline_MCP

./: .gitignore  README.ko.md  README.md  pyproject.toml  run_server.py
catalog/: ootp27_storyline_catalog.json
schemas/: storyline.schema.json
scripts/: extract_storyline_catalog.py
src/ootp_storyline_mcp/: __init__.py  catalog.py  paths.py  project_store.py  server.py  validation.py  xml_export.py  xml_import.py
